Cambios de forma

--- a/Index.html
+++ b/Index.html
@@ -42,16 +42,16 @@
                 
         <div id="right-section" class="right-section">
 
-            <div id="output-image">
+            <section id="output-image">
                 <img src="Imagenes/Muñeco.png" alt="Imagen de resultado" class="output-image">
                 <p id="texto1" class="texto1">Ningun mensaje fue encontrado</p>
                 <p id="texto2" class="texto2">Ingresa el texto que desees encriptar o desencriptar</p>
-            </div>
+            </section>
 
-            <div id="respuesta">
+            <section id="respuesta">
                 <p id="resultado" class="output-message"></p>
                 <button id="copiador" onclick="copiadorDeTexto()" class="estilo_de_botón_copiador">Copiar texto</button>
-            </div>
+            </section>
         </div>
     </div>
 
